--- a/src/backend/app/database/alembic/README
+++ b/src/backend/app/database/alembic/README
@@ -1,3 +1,3 @@
 Generic single-database configuration with an async dbapi.
-alembic revision --autogenerate -m "Initial tables"
-alembic upgrade head
+docker-compose exec backend uv run alembic revision --autogenerate -m "Initial tables"
+docker-compose exec backend uv run alembic upgrade head
