--- a/src/backend/TODO.txt
+++ b/src/backend/TODO.txt
@@ -1,5 +1,8 @@
 #TODO: Email verification is disabled for now. For future - we will use OTP
 
+#TODO: Add default photo for landmarks and areas
+#TODO: Add check for duplicate landmark/area names/coordinates/photos
+
 #TODO: Landmarks should have hint images to help users identify them better [or null]
 #TODO: Landmarks should have location where photos should be taken from and radius [list, or null]
 #TODO: Landmarks [from_location, to_location] basically
